2nd commit try from vscode

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div>
         <h3>About</h3>
-        <p>Currently pursuing B.Tech in Civil </p>
+        <p>Currently pursuing B.Tech in Civil Engineeering </p>
         <hr align="centre" color="black" size="5px">
     </div>
     <div>
