update the directory

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div>
         <h3>About</h3>
-        <p>Currently pursuing B.Tech in Civil Engineeering </p>
+        <p>Currently pursuing B.Tech in Civil Engineeering and I love coding very much. I am fond of every type of websites and love to explore what are the new things that made any website look different and appear very elegant.</p>
         <hr align="centre" color="black" size="5px">
     </div>
     <div>
