--- a/index.html
+++ b/index.html
@@ -44,6 +44,36 @@
     </div>
     <div>
         <h3>Work Experience</h3>
+        <ul>
+            <li>
+                <h4>Kritash</h4>
+                <p>IIT JAMMU, Jammu & Kashmir, India</p>
+                <p>August 2019 - Present</p>
+                <ul>
+                    <li>
+                        <h4>Aksharshala Head</h4>
+                        <p>August 2020 - Present</p>
+                    </li>
+                    <li>
+                        <h4>Webmaster</h4>
+                        <p>August 2020 - Present</p>
+                    </li>
+                    <li>
+                        <h4>Core Member</h4>
+                        <p>January 2020 - August 2020</p>
+                    </li>
+                    <li>
+                        <h4>Volunteer</h4>
+                        <p>August 2019 - January 2020</p>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h4>Codebugged AI</h4>
+                <h5>Web Developer Intern</h5>
+                <p>May 2020 - June 2020</p>
+            </li>
+        </ul>
         <hr align="centre" color="black" size="5px">
     </div>
     <div>
