some old changes

--- a/index.html
+++ b/index.html
@@ -21,23 +21,26 @@
     <div>
         <h3>Education</h3>
         <ul>
-            <li><h4>Indian Institute of Technology Jammu</h4>
-            <p>B.tech in Civil Engineering</p>
-            <p>July 2019 - Present</p>
-            <p>Grades :- 7.8 CGPA</p>
-            <hr align="centre" color="grey" size="3px">
+            <li>
+                <h4>Indian Institute of Technology Jammu</h4>
+                <p>B.tech in Civil Engineering</p>
+                <p>July 2019 - Present</p>
+                <p>Grades :- 7.8 CGPA</p>
+                <hr align="centre" color="grey" size="3px">
             </li>
-            <li><h4>A N College Patna</h4>
-            <p>Intermidiate in Science(Maths)</p>
-            <p>Aug 2016 - April 2018</p>
-            <p>Grades :- 69.4% </p>
-            <hr align="centre" color="grey" size="3px">
+            <li>
+                <h4>A N College Patna</h4>
+                <p>Intermidiate in Science(Maths)</p>
+                <p>Aug 2016 - April 2018</p>
+                <p>Grades :- 69.4% </p>
+                <hr align="centre" color="grey" size="3px">
             </li>
-            <li><h4>St.M.G. High School</h4>
-            <p>April 2010 - March 2016</p>
-            <p>High School (10th Board)</p>
-            <p>Grades :- 72.6%</p>
-            <hr align="centre" color="grey" size="3px">
+            <li>
+                <h4>St.M.G. High School</h4>
+                <p>April 2010 - March 2016</p>
+                <p>High School (10th Board)</p>
+                <p>Grades :- 72.6%</p>
+                <hr align="centre" color="grey" size="3px">
             </li>
         </ul>
         <hr align="centre" color="black" size="5px">
@@ -67,12 +70,14 @@
                         <p>August 2019 - January 2020</p>
                     </li>
                 </ul>
+                <hr align="centre" color="grey" size="3px">
             </li>
-            <hr>
+            
             <li>
                 <h4>Codebugged AI</h4>
                 <h5>Web Developer Intern</h5>
                 <p>May 2020 - June 2020</p>
+                <hr align="centre" color="grey" size="3px">
             </li>
         </ul>
         <hr align="centre" color="black" size="5px">
